--- a/src/app/_metronic/partials/layout/extras/dropdown-inner/user-inner/user-inner.component.html
+++ b/src/app/_metronic/partials/layout/extras/dropdown-inner/user-inner/user-inner.component.html
@@ -2,7 +2,7 @@
   <div class="menu-item px-3">
     <div class="menu-content d-flex align-items-center px-3">
       <div class="symbol symbol-50px me-5">
-        <img [src]="'http://127.0.0.1:8000/storage/' +_user.avatar" alt="Avatar" />
+        <img [src]="URL_BACKEND + '/storage/' +_user.avatar" alt="Avatar" />
       </div>
 
       <div class="d-flex flex-column">
