--- a/src/app/_metronic/layout/components/aside/aside-menu/aside-menu.component.html
+++ b/src/app/_metronic/layout/components/aside/aside-menu/aside-menu.component.html
@@ -114,7 +114,7 @@
         routerLinkActive="active"
         routerLink="/cursos/registro"
         ><span class="menu-bullet"><span class="bullet bullet-dot"></span></span
-        ><span class="menu-title">Registrar de cursos</span></a
+        ><span class="menu-title">Registrar cursos</span></a
       >
     </div>
     <div class="menu-item">
