--- a/src/app/modules/auth/auth.component.html
+++ b/src/app/modules/auth/auth.component.html
@@ -25,11 +25,7 @@
   <!-- begin::Footer -->
   <div class="d-flex flex-center flex-column-auto p-10">
     <div class="d-flex align-items-center fw-bold fs-6">
-      <a class="text-muted text-hover-primary px-2 cursor-pointer">About</a
-      ><a class="text-muted text-hover-primary px-2 cursor-pointer">Contact</a
-      ><a class="text-muted text-hover-primary px-2 cursor-pointer"
-        >Contact Us</a
-      >
+      <a class="text-muted text-hover-primary px-2 cursor-pointer">Todos los derechos reservados @CUCEInformatiCamp</a>
     </div>
   </div>
   <!-- end::Footer -->
