--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -155,7 +155,7 @@
       <div class="card card-flush h-md-150 mb-5 mb-xl-10">
         <div class="box-header with-border">
           <div class="card-header pt-5">
-            <h3 class="card-title d-flex flex-column d-flex align-items-center">Estudiantes registrados por categoria</h3>
+            <h3 class="card-title d-flex flex-column d-flex align-items-center">Estudiantes registrados por categoría</h3>
           </div>
         </div>
         <div class="card-body d-flex justify-content-between flex-column pb-1 px-0 min-h-auto ps-4 pe-6">
@@ -172,7 +172,7 @@
       <div class="card card-flush h-md-150 mb-5 mb-xl-10">
         <div class="box-header with-border">
           <div class="card-header pt-5">
-            <h3 class="card-title d-flex flex-column d-flex align-items-center">QuintaGrafica</h3>
+            <h3 class="card-title d-flex flex-column d-flex align-items-center">Clases registradas por categoría</h3>
           </div>
         </div>
         <div class="card-body d-flex justify-content-between flex-column pb-1 px-0 min-h-auto ps-4 pe-6">
