--- a/src/app/_metronic/layout/components/aside/aside-menu/aside-menu.component.html
+++ b/src/app/_metronic/layout/components/aside/aside-menu/aside-menu.component.html
@@ -127,44 +127,18 @@
       >
     </div>
   </div>
+
 </div>
 
-<!-- Accounts -->
-<!-- <div
-  class="menu-item menu-accordion"
-  data-kt-menu-trigger="click"
-  routerLinkActive="here show"
->
-  <span class="menu-link"
-    ><span class="menu-icon"
-      ><span
-        class="svg-icon svg-icon-2"
-        [inlineSVG]="'./assets/media/icons/duotune/communication/com006.svg'"
-      ></span></span
-    ><span class="menu-title" data-link="/crafted/account">Accounts</span
-    ><span class="menu-arrow"></span
-  ></span>
-  <div class="menu-sub menu-sub-accordion" routerLinkActive="menu-active-bg">
-    <div class="menu-item">
-      <a
-        class="menu-link without-sub"
-        routerLinkActive="active"
-        routerLink="/crafted/account/overview"
-        ><span class="menu-bullet"><span class="bullet bullet-dot"></span></span
-        ><span class="menu-title">Overview</span></a
-      >
-    </div>
-    <div class="menu-item">
-      <a
-        class="menu-link without-sub"
-        routerLinkActive="active"
-        routerLink="/crafted/account/settings"
-        ><span class="menu-bullet"><span class="bullet bullet-dot"></span></span
-        ><span class="menu-title">Settings</span></a
-      >
-    </div>
-  </div>
-</div> -->
+<div class="menu-item">
+  <a target="_blank" class="menu-link" href="http://catalogo.cuceinformaticamp.online/">
+    <span class="menu-icon">
+      <span class="svg-icon svg-icon-2" [inlineSVG]="'./assets/media/icons/duotune/general/gen005.svg'"></span>
+    </span>
+    <span class="menu-title">Ir al catálogo</span>
+  </a>
+</div>
+
 
 <!-- Errors -->
 <!-- <div
